@@ -1,6 +1,92 @@
 plugins {
+    //that plugin Add Java compilation, testing, and bundling capabilities to a project.
     id 'java'
 }
+
+plugins {
+    id "com.jfrog.bintray" version "0.4.1"
+}
+
+///////////////////////////////////////////////////
+//For executeble JAR:
+jar {
+    manifest {
+//        attributes 'Main-Class': 'com.example.main.Application'
+        attributes 'Main-Class': 'org.example.Main'
+    }
+}
+/////////////////////////////////////////////////
+//plugins
+
+
+//apply plugin: 'java'
+//apply plugin: JavaPlugin
+
+
+//create and applying new custom plugin , it's include only one task
+class GreetingPlugin1 implements Plugin<Project> {
+    void apply(Project project) {
+
+        project.task('hello22') {
+            doLast {
+                println "Hello from the GreetingPlugin"
+            }
+        }
+    }
+}
+
+apply plugin: GreetingPlugin1
+
+///////////////////////////////////////////
+
+apply plugin: GreetingPlugin
+
+greeting.message = 'Hi from Gradle'   //create object, set value
+
+class GreetingPlugin implements Plugin<Project> {
+    void apply(Project project) {
+        // Add the 'greeting' extension object
+        project.extensions.create("greeting", GreetingPluginExtension)  //command to create an object
+
+        // Add a task that uses the configuration
+        project.task('hello23') {
+            doLast {
+                println project.greeting.message
+            }
+        }
+    }
+}
+
+class GreetingPluginExtension {
+    def String message = 'Hello from GreetingPlugin'
+}
+
+///////////////////////////////////////
+apply plugin: GreetingPlugin4
+
+greetingToSome {
+    message = 'Hi'
+    greeter = 'Gradle'
+}
+
+class GreetingPlugin4 implements Plugin<Project> {
+    void apply(Project project) {
+        project.extensions.create("greetingToSome", GreetingPluginExtension4)
+
+        project.task('hello4') {
+            doLast {
+                println "${project.greetingToSome.message} from ${project.greetingToSome.greeter}"
+            }
+        }
+    }
+}
+
+class GreetingPluginExtension4 {
+    String message
+    String greeter
+}
+
+//////////////////////////////////////
 
 group 'org.example'
 version '1.0-SNAPSHOT'
@@ -8,6 +94,12 @@ version '1.0-SNAPSHOT'
 repositories {
     mavenCentral()
 }
+//to some additional repository
+//repositories {
+//    maven {
+//        url "http://repo.mycompany.com/maven2"
+//    }
+//}
 
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
@@ -53,7 +145,7 @@ task groovyJDK {
 task projectInfo {
     doLast {
         println project.buildDir
-        println getProject().getTasks()
+        println getProject().getTasks().getByName('projectInfo')
         println getProject().getPath()
 
     }
@@ -122,7 +214,6 @@ task copy(type: Copy) {
 }
 
 
-
 //If
 
 task eclipse {
@@ -140,5 +231,43 @@ eclipse.onlyIf {
 eclipse.doFirst {
     if (!usingEclipse) {
         throw new StopExecutionException()
+    }
+}
+
+
+//////////////////////////  test
+apply plugin: 'java' // adds 'test' task
+
+test {
+    // enable TestNG support (default is JUnit)
+    useTestNG()
+
+    // set a system property for the test JVM(s)
+    systemProperty 'some.prop', 'value'
+
+    // explicitly include or exclude tests
+    include 'org/foo/**'
+    exclude 'org/boo/**'
+
+    // show standard out and standard error of the test JVM(s) on the console
+    testLogging.showStandardStreams = true
+
+    // set heap size for the test JVM(s)
+    minHeapSize = "128m"
+    maxHeapSize = "512m"
+
+    // set JVM arguments for the test JVM(s)
+    jvmArgs '-XX:MaxPermSize=256m'
+
+    // listen to events in the test execution lifecycle
+    beforeTest {
+        descriptor -> logger.lifecycle("Running test: " + descriptor)
+    }
+
+    // listen to standard out and standard error of the test JVM(s)
+    onOutput {
+        descriptor, event -> logger.lifecycle
+        ("Test: " + descriptor + " produced standard out/err: "
+                + event.message )
     }
 }
